--- a/axion/pubspec.yaml
+++ b/axion/pubspec.yaml
@@ -9,9 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^14.6.2
   flutter_svg: ^2.0.16
+  go_router: ^14.6.2
   google_fonts: ^6.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -20,4 +21,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/Logo.svg
+    - assets/img/Logo.svg
