--- a/server/Security/pyproject.toml
+++ b/server/Security/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.13"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 python-jose = "^3.3.0"
+pymongo = "^4.10.1"
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
