--- a/axion-patient-dashboard/package.json
+++ b/axion-patient-dashboard/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "@nextui-org/react": "^2.6.10",
+    "@tiptap/core": "^2.11.3",
+    "@tiptap/pm": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
     "apexcharts": "^4.3.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "flowbite-typography": "^1.0.5",
     "framer-motion": "^11.18.1",
     "next": "15.1.3",
     "react": "^19.0.0",
@@ -30,5 +34,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "overrides": {
+    "prosemirror-model": "1.19.3"
+}
 }
