--- a/server/Security/pyproject.toml
+++ b/server/Security/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
 python-jose = "^3.3.0"
 pymongo = "^4.10.1"
+argon2-cffi = "^23.1.0"
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
