--- a/axion-patient-dashboard/package.json
+++ b/axion-patient-dashboard/package.json
@@ -11,18 +11,32 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "@nextui-org/react": "^2.6.10",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tiptap/core": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
     "apexcharts": "^4.3.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "flowbite-typography": "^1.0.5",
-    "framer-motion": "^11.18.1",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.474.0",
     "next": "15.1.3",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.0.0"
+    "react-day-picker": "^9.5.1",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -37,5 +51,5 @@
   },
   "overrides": {
     "prosemirror-model": "1.19.3"
-}
+  }
 }
