--- a/axion-patient-dashboard/package.json
+++ b/axion-patient-dashboard/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tiptap/core": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
     "@tiptap/starter-kit": "^2.11.3",
@@ -34,6 +35,7 @@
     "react-apexcharts": "^1.7.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
