--- a/server/Records/pyproject.toml
+++ b/server/Records/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+fastapi = {extras = ["standard"], version = "^0.115.8"}
+boto3 = "^1.36.18"
+pydantic = "^2.10.6"
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
