--- a/server/Security/pyproject.toml
+++ b/server/Security/pyproject.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
-python-jose = "^3.3.0"
 pymongo = "^4.10.1"
 argon2-cffi = "^23.1.0"
+authlib = "^1.4.1"
+shared-utils = {path = "../shared", develop = true}
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
