--- a/axion-patient_portal/package.json
+++ b/axion-patient_portal/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "pdfjs": "^2.5.3",
@@ -19,7 +22,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
