--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -31,10 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
   qr_flutter: ^4.0.0
+  http: ^0.13.5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 flutter_icons:
   android: true
@@ -67,6 +72,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
