--- a/server/Records/pyproject.toml
+++ b/server/Records/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
 boto3 = "^1.36.18"
 pydantic = "^2.10.6"
+strawberry-graphql = {extras = ["fastapi"], version = "^0.260.2"}
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
