--- a/axion-patient-dashboard/package.json
+++ b/axion-patient-dashboard/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
