--- a/axion-patient_portal/package.json
+++ b/axion-patient_portal/package.json
@@ -23,6 +23,8 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
+    "next-intl": "^3.26.3",
+    "next-themes": "^0.4.4",
     "pdfjs": "^2.5.3",
     "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
