--- a/axion-patient-dashboard/package.json
+++ b/axion-patient-dashboard/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^2.5.1",
     "@tiptap/core": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
@@ -39,7 +40,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
