--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   qr_flutter: ^4.0.0
   http: ^0.13.5
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.11
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -50,6 +53,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
 
 
