--- a/server/Records/pyproject.toml
+++ b/server/Records/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = {extras = ["standard"], version = "^0.115.8"}
 boto3 = "^1.36.18"
 pydantic = "^2.10.6"
 strawberry-graphql = {extras = ["fastapi"], version = "^0.260.2"}
+pymongo = "^4.11.1"
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
