--- a/axion-patient-dashboard/package.json
+++ b/axion-patient-dashboard/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "@hookform/resolvers": "^4.1.2",
     "@nextui-org/react": "^2.6.10",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -36,12 +38,14 @@
     "react-apexcharts": "^1.7.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
