--- a/axion-patient_portal/package.json
+++ b/axion-patient_portal/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "next-intl": "^3.26.3",
