--- a/Hospital_portal/axion-hospital-portal/package.json
+++ b/Hospital_portal/axion-hospital-portal/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.1.3",
     "@tabler/icons-react": "^3.30.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
