--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
+  shared_preferences: ^2.0.15
+  go_router: ^14.6.2
+  flutter_svg: ^2.0.9
+  google_fonts: ^4.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -78,7 +82,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   generate: true
-
+  assets:
+    - assets/img/Logo.svg
+    - assets/img/biometricAuth.svg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
