--- a/server/Security/pyproject.toml
+++ b/server/Security/pyproject.toml
@@ -11,11 +11,13 @@ fastapi = {extras = ["standard"], version = "^0.115.6"}
 pymongo = "^4.10.1"
 argon2-cffi = "^23.1.0"
 authlib = "^1.4.1"
-shared-utils = {path = "../shared", develop = true}
+
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
 
 [build-system]
 requires = ["poetry-core"]
