--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -31,14 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   qr_flutter: ^4.0.0
-  http: ^0.13.5
-  hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.11
-  shared_preferences: ^2.0.15
   go_router: ^14.6.2
   flutter_svg: ^2.0.9
+  http: ^1.1.0
+  hive: ^2.2.3
+  path_provider: ^2.1.2
+  shared_preferences: ^2.2.2
+  intl: ^0.19.0  # Instead of 'any'
   google_fonts: ^4.0.4
+  graphql_flutter: ^5.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,7 +48,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_localizations:
     sdk: flutter
-  intl: any
 
 flutter_icons:
   android: true
@@ -56,6 +57,7 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
