--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -41,13 +41,14 @@ dependencies:
   intl: ^0.19.0  # Instead of 'any'
   google_fonts: ^4.0.4
   graphql_flutter: ^5.0.1
-
-
+  flutter_secure_storage: ^4.2.1
+  encrypt: ^5.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_localizations:
     sdk: flutter
+  share_plus: ^10.1.4
 
 flutter_icons:
   android: true
