--- a/server/Analytics/pyproject.toml
+++ b/server/Analytics/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+fastapi = "^0.115.11"
+uvicorn = "^0.34.0"
+pymongo = {extras = ["srv"], version = "^4.11.2"}
 
 [tool.poetry.scripts]
 dev = 'app.main:main'
