--- a/Hospital_portal/axion-hospital-portal/package.json
+++ b/Hospital_portal/axion-hospital-portal/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/postcss": "^4.0.9",
     "class-variance-authority": "^0.7.1",
