--- a/axion/project 3/flutter_application_1/ios/Runner/Info.plist
+++ b/axion/project 3/flutter_application_1/ios/Runner/Info.plist
@@ -24,6 +24,20 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<!-- Location permissions -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location to track login locations.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location to track login locations.</string>
+	<!-- Camera permissions -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera access to scan QR codes and take profile pictures.</string>
+	<!-- Photo Library permissions -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photo library to upload profile pictures.</string>
+	<!-- Notification permissions -->
+	<key>NSUserNotificationUsageDescription</key>
+	<string>This app needs to send you notifications about important updates and alerts.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
