--- a/axion-doctor-portal/package.json
+++ b/axion-doctor-portal/package.json
@@ -36,6 +36,7 @@
     "graphql": "^16.10.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
