--- a/Hospital_portal/axion-hospital-portal/package.json
+++ b/Hospital_portal/axion-hospital-portal/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/postcss": "^4.0.9",
     "class-variance-authority": "^0.7.1",
@@ -28,7 +29,8 @@
     "react-router-dom": "^7.3.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-filters": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
