--- a/server/Security/dockerfile
+++ b/server/Security/dockerfile
@@ -1,32 +1,15 @@
-FROM python:3.13
-
-ARG YOUR_ENV
-
-ENV YOUR_ENV=${YOUR_ENV} \
-  PYTHONFAULTHANDLER=1 \
-  PYTHONUNBUFFERED=1 \
-  PYTHONHASHSEED=random \
-  PIP_NO_CACHE_DIR=off \
-  PIP_DISABLE_PIP_VERSION_CHECK=on \
-  PIP_DEFAULT_TIMEOUT=100 \
-  POETRY_NO_INTERACTION=1 \
-  POETRY_VIRTUALENVS_CREATE=false \
-  POETRY_CACHE_DIR='/var/cache/pypoetry' \
-  POETRY_HOME='/usr/local' \
-  POETRY_VERSION=1.7.1
-
-
-
-RUN curl -sSL https://install.python-poetry.org | python3 -
+FROM python:3.12
 
 
 WORKDIR /app
-COPY poetry.lock pyproject.toml /app/
 
-COPY . /app
-RUN poetry install
+COPY requirements.txt .
+
+RUN pip install -r requirements.txt
+
+COPY . .
+
+EXPOSE 8000
 
 
-
-
-CMD [ "poetry", "run", "dev" ]
+CMD [ "python","-m","app.main" ]
