--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,22 +1,32 @@
-# Use root/example as user/password credentials
-version: '3.1'
 
 services:
 
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-
-  mongo-express:
-    image: mongo-express
-    restart: always
+  security:
+    container_name: security
     ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-      ME_CONFIG_BASICAUTH: false
+      - 8000:8000
+    
+    build:
+      context: ./Security
+      dockerfile: Dockerfile
+
+    depends_on:
+      - mq
+      - cache
+
+
+  mq:
+    container_name: rabbitMQ
+    image: rabbitmq:4.0-management
+    ports:
+      - 5672:5672
+      - 15672:15672
+    
+  
+  cache:
+    container_name: redis
+    image: redis/redis-stack:latest
+    ports:
+      - 6379:6379
+      - 8001:8001
+    
