--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -14,6 +14,30 @@ services:
       - mq
       - cache
 
+  notification:
+    container_name: notification
+    ports:
+      - 8080:8080
+    
+    build:
+      context: ./Notification
+      dockerfile: Dockerfile
+    
+    depends_on:
+      mq:
+        condition: service_healthy
+  
+    
+    environment:
+      - DB_URI="mongodb+srv://TestAxionAdmin:YRmx2JtrK44FDLV@axion-test-cluster.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
+
+      - TWILIO_ACCOUNT_SID = "ACbc22a102035d1169598738f085845f7f"
+      - TWILIO_AUTH_TOKEN = "5d496a1ec47eed33f6ccaa5bbfba1a8d"
+      - TWILIO_PHONE_NUMBER = "+15175832371"
+
+      - MAILJET_API_KEY="eaba786ef725d15531fdfcb423525cb0"
+      - MAILJET_API_SECRET="e15296850e0392377884ea34f8a737f9"
+      - MAILJET_FROM_EMAIL="healthvault.co@gmail.com"
 
   mq:
     container_name: rabbitMQ
@@ -21,7 +45,11 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
-    
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   
   cache:
     container_name: redis
