--- a/axion-patient_portal/package.json
+++ b/axion-patient_portal/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "graphql": "^16.10.0",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.474.0",
@@ -41,11 +42,13 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^8.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
