--- a/axion-patient_portal/package.json
+++ b/axion-patient_portal/package.json
@@ -49,6 +49,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^8.0.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
