--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -95,6 +95,10 @@ flutter:
   generate: true
   assets:
     - assets/img/Logo.svg
+    - assets/img/login_image.svg
+    - assets/img/step_one.svg
+    - assets/img/step_two.svg
+    - assets/img/step_three.svg
     - assets/img/biometricAuth.svg
     - .env
   # To add assets to your application, add an assets section, like this:
