--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -24,15 +24,15 @@ services:
   
     
     environment:
-      - DB_URI="mongodb+srv://TestAxionAdmin:YRmx2JtrK44FDLV@axion-test-cluster.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
+      - DB_URI=mongodb+srv://TestAxionAdmin:YRmx2JtrK44FDLV@axion-test-cluster.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000
 
-      - TWILIO_ACCOUNT_SID="ACbc22a102035d1169598738f085845f7f"
-      - TWILIO_AUTH_TOKEN="5d496a1ec47eed33f6ccaa5bbfba1a8d"
+      - TWILIO_ACCOUNT_SID=ACbc22a102035d1169598738f085845f7f
+      - TWILIO_AUTH_TOKEN=5d496a1ec47eed33f6ccaa5bbfba1a8d
       - TWILIO_PHONE_NUMBER="+15175832371"
 
-      - MAILJET_API_KEY="eaba786ef725d15531fdfcb423525cb0"
-      - MAILJET_API_SECRET="e15296850e0392377884ea34f8a737f9"
-      - MAILJET_FROM_EMAIL="healthvault.co@gmail.com"
+      - MAILJET_API_KEY=eaba786ef725d15531fdfcb423525cb0
+      - MAILJET_API_SECRET=e15296850e0392377884ea34f8a737f9
+      - MAILJET_FROM_EMAIL=healthvault.co@gmail.com
 
   record:
     container_name: record
@@ -43,18 +43,15 @@ services:
       context: ./Records
       dockerfile: Dockerfile
     
+  logging-analytics:
+    container_name: record
+    ports:
+      - 4000:4000
     
-
-  #mq:
-   # container_name: rabbitMQ
-   # image: rabbitmq:4.0-management
-   # ports:
-   #   - 5672:5672
-   #   - 15672:15672
-   # healthcheck:
-    #  test: ["CMD", "rabbitmqctl", "status"]
-   ##   timeout: 5s
-    #  retries: 5
+    build:
+      context: ./Analytics
+      dockerfile: Dockerfile
+    
   
   cache:
     container_name: redis
