--- a/server/Analytics/dockerfile
+++ b/server/Analytics/dockerfile
@@ -1,1 +1,16 @@
-FROM ubuntu:latest
+FROM python:3.12
+
+
+WORKDIR /app
+
+COPY requirements.txt .
+
+RUN pip install -r requirements.txt
+
+COPY . .
+
+EXPOSE 4000
+ENV AZURE_DATABASE_URL  mongodb+srv://TestAxionAdmin:YRmx2JtrK44FDLV@axion-test-cluster.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000
+
+
+CMD [ "python","-m","app.main" ]
