--- a/axion/project 3/flutter_application_1/android/app/src/main/AndroidManifest.xml
+++ b/axion/project 3/flutter_application_1/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <!-- Notification permissions -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
-        android:label="flutter_application_1"
+        android:label="Axion"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
