--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   qr_flutter: ^4.0.0
   hive_flutter: ^1.1.0
   go_router: ^14.6.2
+  line_icons: ^2.0.0
   flutter_svg: ^2.0.9
   http: ^1.1.0
   hive: ^2.2.3
@@ -53,9 +54,9 @@ dependencies:
   json_annotation: ^4.9.0
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
+  cupertino_icons: ^1.0.0
   flutter_local_notifications: ^16.3.2
   share_plus: ^10.0.0
-  cupertino_icons: ^1.0.8
   flutter_localizations:
     sdk: flutter
   flutter_dotenv: ^5.2.1
