--- a/axion-doctor-portal/package.json
+++ b/axion-doctor-portal/package.json
@@ -35,7 +35,7 @@
 		"framer-motion": "^11.18.2",
 		"graphql": "^16.10.0",
 		"lucide-react": "^0.474.0",
-		"next": "15.1.3",
+		"next": "^15.2.3",
 		"next-auth": "^5.0.0-beta.25",
 		"next-themes": "^0.4.4",
 		"radix-ui": "^1.1.3",
@@ -52,6 +52,7 @@
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^11.1.0",
 		"vaul": "^1.1.2",
+		"ws": "^8.18.1",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
@@ -62,6 +63,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/ws": "^8.18.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.3",
 		"jest": "^29.7.0",
