--- a/axion/project 3/flutter_application_1/pubspec.yaml
+++ b/axion/project 3/flutter_application_1/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   provider: ^6.1.2
+  timeago: ^3.7.0
 
 flutter_icons:
   android: true
