--- a/axion-patient_portal/package.json
+++ b/axion-patient_portal/package.json
@@ -23,6 +23,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
