--- a/axion-doctor-portal/package.json
+++ b/axion-doctor-portal/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-popover": "^1.1.6",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.3",
+		"@radix-ui/react-tooltip": "^1.1.8",
 		"@reduxjs/toolkit": "^2.5.1",
 		"@tiptap/core": "^2.11.3",
 		"@tiptap/pm": "^2.11.3",
@@ -34,6 +35,8 @@
 		"flowbite-typography": "^1.0.5",
 		"framer-motion": "^11.18.2",
 		"graphql": "^16.10.0",
+		"jspdf": "^3.0.1",
+		"jspdf-autotable": "^5.0.2",
 		"lucide-react": "^0.474.0",
 		"next": "^15.2.3",
 		"next-auth": "^5.0.0-beta.25",
@@ -46,6 +49,8 @@
 		"react-hook-form": "^7.54.2",
 		"react-redux": "^9.2.0",
 		"recharts": "^2.15.1",
+		"redux": "^5.0.1",
+		"redux-persist": "^6.0.0",
 		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwind-scrollbar": "^3.1.0",
